# mcp-mem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  run_mcp.py  setup.py  terminate_server.py
docs/source/: conf.py  index.rst  mcp_mem.rst  modules.rst
examples/: basic_usage.py  example_usage.md  run_with_env_vars.sh  test_env_vars.py
src/mcp_mem/: __about__.py  __init__.py  config.py  custom_llm.py  instance_manager.py  lightrag_client.py  lightrag_interface.py  lightrag_storage.py  memory_utils.py  server.py  storage.py
src/mcp_mem/retrieval_evaluation/: __init__.py  evaluation.py  ground_truth.py  query_generation.py  sample_content.py  types.py  utils.py
tests/: conftest.py  test_config.py  test_instance_manager.py  test_memory.py  test_memory_utils.py
