[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-mem"
version = "0.3.2"
description = "An MCP server providing permanent, unlimited AI memory storage to overcome context limitations"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Don Kang", email = "donkang34@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastmcp>=2.2.10",
    "hipporag @ git+https://github.com/ddkang1/HippoRAG.git@670386a2a2f2e2b0048f0b32296e3a37818c58d4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.1.0",
    "isort>=5.10.1",
    "mypy>=0.931",
    "flake8>=4.0.1",
]

[project.urls]
"Homepage" = "https://github.com/ddkang1/mcp-mem"
"Bug Tracker" = "https://github.com/ddkang1/mcp-mem/issues"
"Documentation" = "https://github.com/ddkang1/mcp-mem#readme"

[project.scripts]
mcp-mem = "mcp_mem.__main__:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"